<resources>
    <string name="app_name">QR Reader</string>

    <!-- LOADING-->
    <string name="validate_generic_loading_title">Aguarde!</string>
    <string name="validate_virtual_card_loading_body">Estamos criando seu Cartão Virtual</string>
    <string name="validate_agency_account_loading_body">Estamos validando a informação.</string>
    <string name="loading_my_cards_body">Estamos carregando seus cartões.</string>
    <string name="reader_title_name">Nome:</string>
    <string name="reader_title_value">Valor:</string>
    <string name="share">Compartilhar</string>
    <string name="menu_title_settings">Configurações</string>
    <string name="menu_title_read">Ler</string>
    <string name="menu_title_help">Ajuda</string>
    <string name="menu_title_create">Criar</string>

    <string name="qr_code_view_title">Ler QR Code</string>
    <string name="create_card">Criar cartão de visita</string>
    <string name="my_cards">Meu cartão de visita</string>
    <string name="my_codes">Meus Códigos</string>
    <string name="help">Ajuda</string>

    <!-- Create Pix -->
    <string name="create_title_name">Nome:</string>
    <string name="create_email_hint">E-mail:</string>
    <string name="create_title_key">Chave pix:</string>
    <string name="create_title_site">Site/Linkedin/Instagram:</string>
    <string name="create_checkbox_frequency">Utilizar mais de uma vez</string>
    <string name="create_title_company">Nome da empresa:</string>
    <string name="reader_activity_button">Visitar Site</string>
   <string name="create_button_generate">Gerar cartão de visita</string>
    <string name="create_title_address">Endereço</string>
    <string name="create_title_phone">Telefone</string>
    <string name="menu_title_my_cards">Meus Cartões</string>

    <!--> ACTIONS -->
    <string name="action_cancel">Cancelar</string>
    <string name="action_open">Abrir</string>
    <string name="action_delete">Excluir</string>
    <string name="action_continue">Continuar</string>
    <string name="action_share_via">Compartilhar através de</string>

    <!--> EMPTY HOLDERS -->
    <string name="barcode_empty_title">Ops!</string>
    <string name="barcode_empty_body">Você ainda não leu nenhum Qr Code</string>
    <string name="cards_empty_title">Ops!</string>
    <string name="cards_empty_body">Você ainda não cadastrou nenhum cartão de visita</string>
    <string name="action_description_delete">Deletar Item</string>
    <string name="action_description_open_browser">Abrir no browser</string>

    <!--> DIALOGS -->
    <string name="generic_dialog_title">Alerta de Segurança</string>
    <string name="generic_dialog_body">Você está prestes a abrir um link externo, o QR Reader não tem nenhuma relação com qualquer site externo, se está certo de que quer prosseguir clique em continuar.</string>
    <string name="delete_dialog_title">Deletar Item?</string>
    <string name="delete_dialog_body">Se está certo de que quer deletar clique em continuar.</string>
    <string name="choose_color_card">Escolha a cor do seu cartão</string>
    <string name="choose_color_red">Vermelho</string>
    <string name="choose_color_blue">Azul</string>
    <string name="choose_color_green">Verde</string>
    <string name="my_cards_loading_body">Estamos carregando seus cartões.</string>
    <string name="barcode_list_loading_body">Estamos carregando seus códigos...</string>
    <string name="register_card_button_text">Cadastrar Cartão</string>
    <string name="register_card_title_name">Pra começar precisamos do seu nome</string>
    <string name="register_card_title_email">Agora um email para os seus clientes entrarem em contato</string>
    <string name="register_card_title_address">Informe o seu endereço comercial</string>
    <string name="register_card_title_telephone">Informe um telefone para entrarem em contato</string>
    <string name="register_card_title_company">Falta pouco, informe o nome da sua empresa</string>
    <string name="register_card_title_network">Informe uma rede social ou um site</string>
    <string name="register_card_title_color">...e por último escolha a cor do seu cartão</string>

</resources>