<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <include
            android:id="@+id/include2"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/createCardColorLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:background="@drawable/bg_focus_rounded"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2">

            <TextView
                android:id="@+id/chooseColorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/choose_color_card"
                android:textColor="@color/colorDoveGray" />

            <RadioGroup
                android:id="@+id/chooseColorRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/chooseColorRedRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/horizontal_margin"
                    android:text="@string/choose_color_red"
                    android:textColor="@color/colorDoveGray" />

                <RadioButton
                    android:id="@+id/chooseColorBlueRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/horizontal_margin"
                    android:text="@string/choose_color_blue"
                    android:textColor="@color/colorDoveGray" />

                <RadioButton
                    android:id="@+id/chooseColorGreenRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/horizontal_margin"
                    android:text="@string/choose_color_green"
                    android:textColor="@color/colorDoveGray" />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createCardAddressBt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin_XXlarge"
            android:fontFamily="@font/google_sans"
            android:text="@string/create_button_generate"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.sugarspoon.qrreader.widgets.LoadingView
            android:id="@+id/createCardGenerateLv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>